<resources>
    <string name="app_name">AdictosGbrBucaramanga</string>
    <string name="bienvenidoLogin">BIENVENIDO</string>
    <string name="bienvenidoLogin2">A la base de datos de Adictos Gbr bucaramanga</string>
    <string name="textLogin">Inicie sesión con:</string>
    <string name="facebook_app_id">308100932937277</string>
    <string name="inicio">Inicio</string>
    <string name="nameWel">Nombre</string>
    <string name="session">Iniciaste sesión como:</string>
    <string name="push">Presiona en la imagen para acceder a la información</string>
    <string name="textButtonWel">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infoUser">Información de usuario</string>
    <string name="copyR">Gonobikerreas es una marca registrada ®</string>
    <string name="authori">Queda Prohibido El Uso Sin Su Respectiva Autorización</string>
    <string name="all">Todos los derechos reservados ®</string>
    <string name="Información">Información</string>
    <string name="datos">Datos Piloto</string>
    <string name="moto">Datos Moto</string>
    <string name="contac">Datos Persona De Contacto</string>
    <string name="botonImg">Seleccione imagen de perfil</string>
    <string name="estadoSp">Seleccione Estado De Piloto </string>
    <string name="crear">Guardar Piloto</string>
    <string name="crearP">Crear Piloto</string>

    <string-array name="estado">
        <item>Activo</item>
        <item>Inactivo</item>
        <item>Expulsado</item>
    </string-array>
    <string name="title_activity_view_user">ViewUser</string>
</resources>
