<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.christianxavier.adictosgbrbucaramanga.vista.Create">

    <ScrollView
        android:layout_width="344dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/estadoSp"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/cmbEstado"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"></Spinner>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtcod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Código"
                    android:textColor="@color/textColor"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombres"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Apellidos"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="RH"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Apodo"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Celular"
                    android:textColor="@color/textColor"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cumple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Cumpleaños"
                    android:textColor="@color/textColor"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ingreso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fecha Ingreso"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ocupacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ocupación"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moto"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/moto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Moto"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/modelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Modelo"
                    android:textColor="@color/textColor"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/placa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Placa"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contac"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre De Contacto"
                    android:textColor="@color/textColor"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telContac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Celular Contacto"
                    android:textColor="@color/textColor"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnImgePro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonImg"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <Button
                android:id="@+id/crearPilot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/crear"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
